fix centering issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;    /* Remove default margin */
     display: flex;
     justify-content: center; /* Center items horizontally */
@@ -11,16 +12,20 @@ body {
     font-family: Arial, sans-serif;
 }
 
+#backgroundContainer {
+    display: flex;
+    justify-content: center; /* Center items horizontally */
+    align-items: center;     /* Center items vertically */
+    width: 100%;
+    height: 100vh;
+}
+
 #centerContainer{
     display: grid;
-    justify-content: center; 
-    align-items: center;     
-    margin-left: auto;
-    margin-right: auto;
     border: 1px solid black;
     border-radius: 10px;
-    padding: 100px;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+    padding: 25px;
 }
 
 #taskList{
